# james

./: .gitignore  BuiltInClasses.cpp  BuiltInClasses.h  CMakeLists.txt  Class.cpp  Class.h  HexBinary.cpp  HexBinary.h  IntegerClass.cpp  IntegerClass.h  README  XMLDocument.cpp  XMLDocument.h  XMLObject.cpp  XMLObject.h  XercesString.cpp  XercesString.h  main.c  main.cpp  main.h
example/: Makefile  example.cpp  example.xsd  person.xml
examples/small/: Makefile  small.cpp  small.xsd
libjames/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  HexBinary.cpp  HexBinary.h  XMLDocument.cpp  XMLDocument.h  XMLObject.cpp  XMLObject.h  XercesString.cpp  XercesString.h  optional.h  version.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
